<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialogCardView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone"
    android:alpha="0"
    android:layout_marginStart="20dp"
    android:layout_marginTop="120dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="120dp"
    app:cardBackgroundColor="@color/black_background"
    app:cardCornerRadius="30dp"
    app:rippleColor="@android:color/transparent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24sp"
        android:layout_marginTop="24sp"
        android:text="@string/select_color"
        android:textColor="@color/poor_white"
        android:textSize="@dimen/head_text_size" />

    <com.skydoves.colorpickerview.ColorPickerView
        android:id="@+id/colorPickerView"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_gravity="center"
        android:layout_margin="30dp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelBtn"
            style="@style/ColorPickDialogButtonStyle"
            android:backgroundTint="@color/cancel_red"
            android:layout_marginEnd="@dimen/color_picker_button_divider_size"
            android:text="@string/cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirmBtn"
            style="@style/ColorPickDialogButtonStyle"
            android:backgroundTint="@color/poor_white"
            android:textColor="@color/black_background"
            android:layout_marginStart="@dimen/color_picker_button_divider_size"
            android:text="@string/confirm" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>