<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardBackgroundColor="@android:color/transparent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/colorPickerBlur"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:backgroundTint="@color/black"
        android:visibility="gone" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/dialogCardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="120dp"
        android:alpha="0"
        android:visibility="gone"
        app:cardBackgroundColor="@color/black_background"
        app:cardCornerRadius="30dp"
        app:rippleColor="@android:color/transparent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24sp"
            android:layout_marginTop="24sp"
            android:text="@string/select_color"
            android:textColor="@color/poor_white"
            android:textSize="@dimen/head_text_size" />

        <com.skydoves.colorpickerview.ColorPickerView
            android:id="@+id/colorPickerView"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:layout_gravity="center"
            android:layout_margin="30dp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelBtn"
                style="@style/ColorPickDialogButtonStyle"
                android:layout_marginEnd="@dimen/color_picker_button_divider_size"
                android:backgroundTint="@color/cancel_red"
                android:text="@string/cancel" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirmBtn"
                style="@style/ColorPickDialogButtonStyle"
                android:layout_marginStart="@dimen/color_picker_button_divider_size"
                android:backgroundTint="@color/poor_white"
                android:text="@string/confirm"
                android:textColor="@color/black_background" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

</com.google.android.material.card.MaterialCardView>